test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Private_Key/POST_api_atlas_v2_groups_b0123456789abcdef012345b_databaseUsers_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Mon, 06 Oct 2025 02:44:45 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="7BmvBKHCEBLIxjPQgocvvtg2PneLhpCd", algorithm=MD5, qop="auth", stale=false
X-Envoy-Upstream-Service-Time: 4

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}